<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Game2">

    <Button
        android:id="@+id/button4"
        android:layout_width="179dp"
        android:layout_height="80dp"
        android:text="@string/bsiguiente"
        tools:layout_editor_absoluteX="116dp"
        tools:layout_editor_absoluteY="625dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eligio"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="62dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jturno"
        tools:layout_editor_absoluteX="178dp"
        tools:layout_editor_absoluteY="69dp" />

</androidx.constraintlayout.widget.ConstraintLayout>